# ai-advisor-project

./: .env.example  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  server.js  test-mongo-connection-ipv4.js  tsconfig.json  vite.config.ts
ai-services/fastapi-ai/: .env.example  .gitignore  AI_SERVICES_OVERVIEW.md  README.md  pyproject.toml
ai-services/fastapi-ai/app/: main.py
ai-services/fastapi-ai/app/api/v1/: router.py
ai-services/fastapi-ai/app/api/v1/endpoints/: anomaly.py  risk.py  (+1 more)
ai-services/fastapi-ai/app/core/: config.py
ai-services/fastapi-ai/app/schemas/: anomaly.py  common.py  risk.py  sentiment.py
ai-services/fastapi-ai/app/services/: anomaly_service.py  risk_service.py  sentiment_service.py
ai-services/fastapi-ai/ml/: README.md
ai-services/fastapi-ai/ml/risk/: README.md
ai-services/fastapi-ai/ml/risk/configs/: risk_train.yaml
ai-services/fastapi-ai/ml/risk/data/: check_risk_data.py  gen_risk_data.py  risk_test.csv  risk_train.csv  risk_valid.csv
ai-services/fastapi-ai/ml/risk/scripts/: eval_risk.py  predict_risk.py  predict_risk_edit_input.py  risk_common.py  train_risk.py
ai-services/fastapi-ai/ml/sentiment/: README.md
ai-services/fastapi-ai/ml/sentiment/configs/: sentiment_train.yaml
ai-services/fastapi-ai/ml/sentiment/data/: gen_data.py  sentiment_test.csv  sentiment_train.csv  sentiment_valid.csv
ai-services/fastapi-ai/ml/sentiment/scripts/: eval_sentiment.py  predict_sentiment.py  prepare_phobert.py  sentiment_common.py  train_sentiment.py
ai-services/fastapi-ai/tests/: test_anomaly.py
(+193 files in other folders)
